# libhangul

./: .gitignore  autogen.sh  configure.ac
data/: Makefile.am
data/keyboards_info/: 2set_2.txt  2set_2n9256.txt  2set_2noshift.txt  2set_2y.txt  3set_3-14-proposal.txt  3set_3-2011-yet.txt  3set_3-2011.txt  3set_3-2012-yet.txt  3set_3-2012.txt  3set_3-2014-yet.txt  3set_3-2014.txt  3set_3-2015-metal.txt  3set_3-2015-patal-yet.txt  3set_3-2015-patal.txt  3set_3-2015-yet.txt  3set_3-2015.txt  3set_3-89.txt  3set_3-90.txt  3set_3-91-noshift.txt  3set_3-91.txt  3set_3-93-yet.txt  3set_3-95.txt  3set_3-ahn.txt  3set_3-p2.txt  3set_3-p3.txt  3set_32.txt  3set_3gimguk-38a-yet.txt  3set_3moa-semoe-2014.txt  3set_3moa-semoe-2015.txt  3set_3moa-semoe-2016.txt  3set_3moa-semoe-2017.txt  3set_3moa-semoe-2018.txt  3set_3shin-1995.txt  3set_3shin-2003.txt  3set_3shin-2012.txt  3set_3shin-2015.txt  3set_3shin-m.txt  3set_3shin-p-yet.txt  3set_3shin-p.txt  3set_3shin-p2-yet.txt  (+9 more)
debian/: changelog  changelog.upstream  control  copyright  gbp.conf  libhangul-data.install  libhangul-data.maintscript  libhangul-dev.install  libhangul1.symbols  rules  watch
debian/patches/: path-max.patch  series
debian/source/: options
debian/tests/: control  run-test
hangul/: hangul.h  hangulctype.c  hangulinputcontext.c  hangulinternals.h  hangulkeyboard.c  hangulkeyboard.h
po/: ko.po  libhangul.pot
