
keyboards_infodir   = $(pkgdatadir)/keyboards_info
keyboards_info_DATA = \
	2set_2.png \
	2set_2.txt \
	2set_2n9256.png \
	2set_2n9256.txt \
	2set_2noshift.png \
	2set_2noshift.txt \
	2set_2y.png \
	2set_2y.txt \
	3set_3-89.png \
	3set_3-89.txt \
	3set_3-90.png \
	3set_3-90.txt \
	3set_3-91.png \
	3set_3-91.txt \
	3set_3-91-noshift.png \
	3set_3-91-noshift.txt \
	3set_3-93-yet.png \
	3set_3-93-yet.txt \
	3set_3-95.png \
	3set_3-95.txt \
	3set_3-2011-yet.png \
	3set_3-2011-yet.txt \
	3set_3-2011.png \
	3set_3-2011.txt \
	3set_3-2012-yet.png \
	3set_3-2012-yet.txt \
	3set_3-2012.png \
	3set_3-2012.txt \
	3set_3-2014.png \
	3set_3-2014.txt \
	3set_3-2014-yet.png \
	3set_3-2014-yet.txt \
	3set_3-2015.png \
	3set_3-2015.txt \
	3set_3-2015-yet.png \
	3set_3-2015-yet.txt \
	3set_3-2015-metal.png \
	3set_3-2015-metal.txt \
	3set_3-2015-patal.png \
	3set_3-2015-patal.txt \
	3set_3-2015-patal-yet.png \
	3set_3-2015-patal-yet.txt \
	3set_3-p2.png \
	3set_3-p2.txt \
	3set_3-p3.png \
	3set_3-p3.txt \
	3set_3-14-proposal.png \
	3set_3-14-proposal.txt \
	3set_32.png \
	3set_32.txt \
	3set_3ahn.png \
	3set_3ahn.txt \
	3set_3moa-semoe-2014.png \
	3set_3moa-semoe-2014.txt \
	3set_3moa-semoe-2015.png \
	3set_3moa-semoe-2015.txt \
	3set_3moa-semoe-2016.png \
	3set_3moa-semoe-2016.txt \
	3set_3moa-semoe-2017.png \
	3set_3moa-semoe-2017.txt \
	3set_3shin-1995.png \
	3set_3shin-1995.txt \
	3set_3shin-2003.png \
	3set_3shin-2003.txt \
	3set_3shin-2012.png \
	3set_3shin-2012.txt \
	3set_3shin-2015.png \
	3set_3shin-2015.txt \
	3set_3shin-m.png \
	3set_3shin-m.txt \
	3set_3shin-p.png \
	3set_3shin-p.txt \
	3set_3shin-p-yet.png \
	3set_3shin-p-yet.txt \
	3set_3shin-p2.png \
	3set_3shin-p2.txt \
	3set_3shin-p2-yet.png \
	3set_3shin-p2-yet.txt \
	3set_3sun-1990.png \
	3set_3sun-1990.txt \
	3set_3sun-2014.png \
	3set_3sun-2014.txt \
	3set_3gimguk-38a-yet.png \
	3set_3gimguk-38a-yet.txt \
	3set_ahn.png \
	3set_ahn.txt \
	kb_us_colemak.png \
	kb_us_colemak.txt \
	kb_us_dvorak.png \
	kb_us_dvorak.txt \
	kb_us_qwerty.png \
	kb_us_qwerty.txt \
	kb_us_ro.png \
	kb_us_ro.txt \
	$(NULL)

EXTRA_DIST = $(keyboards_info_DATA)
